new curtain test

--- a/gk/curtain/about-us.html
+++ b/gk/curtain/about-us.html
@@ -22,9 +22,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=3767765162" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=3814796371" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#u3716 {  pointer-events: none;}</style>
+  <style>#u5261 {  pointer-events: none;}</style>
   <!--/*
 
 */
@@ -33,43 +33,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu1311-7"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U1311-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix grpelem" id="u1311-7" data-muse-uid="U1311" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p id="u1311-2">About Us</p>
-     <p id="u1311-3">&nbsp;</p>
-     <p id="u1311-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </div>
-    <!-- /m_editable -->
-    <div class="museBGSize grpelem" id="u1442"><!-- content --></div>
-    <div class="clearfix grpelem" id="u3403"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U3405-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3405-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3405" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3406-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3406-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3406" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3404-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3404-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3404" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3407-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3407-4" href="games.html" data-href="page:U2961" data-muse-uid="U3407" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
-     <!-- /m_editable -->
-    </div>
-    <!-- m_editable region-id="editable-static-tag-U3409-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix grpelem" id="u3409-4" data-muse-uid="U3409" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>© Gods Kid Inc 2020</p>
-    </div>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U3410-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame grpelem" id="u3410" href="http://www.tacklebox.company" data-muse-uid="U3410"><!-- svg --><img class="svg" id="u3411" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
-    <!-- /m_editable -->
-    <div class="browser_width grpelem" id="u3716-bw">
-     <div id="u3716"><!-- animation -->
-      <iframe class="animationContainer an_invi" id="U3719_animation" src="assets/curtain/curtain.html" scrolling="no"></iframe>
-     </div>
-    </div>
-   </div>
    <div class="clearfix grpelem" id="pu3103"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U3103-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
     <a class="nonblock nontext museBGSize" id="u3103" href="index.html" data-href="page:U93" data-muse-uid="U3103"><!-- content --></a>
@@ -90,8 +53,60 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix" id="u3110-4" href="games.html" data-href="page:U2961" data-muse-uid="U3110" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
     <div class="ose_pre_init" id="u3111"><!-- content --></div>
+    <div class="browser_width" id="u5279-bw">
+     <div id="u5279"><!-- animation -->
+      <iframe class="animationContainer an_invi" id="U5282_animation" src="assets/curtain/curtain.html" scrolling="no"></iframe>
+     </div>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1187" data-content-above-spacer="1187" data-content-below-spacer="0"></div>
+   <div class="clearfix grpelem" id="pu1311-7"><!-- column -->
+    <!-- m_editable region-id="editable-static-tag-U1311-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u1311-7" data-muse-uid="U1311" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p id="u1311-2">About Us</p>
+     <p id="u1311-3">&nbsp;</p>
+     <p id="u1311-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="museBGSize colelem" id="u1442"><!-- content --></div>
+    <div class="clearfix colelem" id="u3403"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U3405-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3405-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3405" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3615-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3615-4" data-muse-uid="U3615" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3406-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3406-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3406" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3621-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3621-4" data-muse-uid="U3621" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3404-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3404-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3404" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3627-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3627-4" data-muse-uid="U3627" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3407-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3407-4" href="games.html" data-href="page:U2961" data-muse-uid="U3407" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+     <!-- /m_editable -->
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U3409-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3409-4" data-muse-uid="U3409" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p>© Gods Kid Inc 2020</p>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U3410-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clip_frame colelem" id="u3410" href="http://www.tacklebox.company" data-muse-uid="U3410"><!-- svg --><img class="svg" id="u3411" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
+    <!-- /m_editable -->
+   </div>
+   <div class="verticalspacer" data-offset-top="1136" data-content-above-spacer="1136" data-content-below-spacer="50"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -109,11 +124,9 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
-Muse.Utils.resizeHeight('.browser_width');/* resize height */
-Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u3111').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
+$('#u3111').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
