--- a/gk/curtain/gallery.html
+++ b/gk/curtain/gallery.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=455055910" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=425917681" id="pagesheet"/>
     <!--/*
 
 */
@@ -64,11 +64,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U3435-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3435-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3435" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3630-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3630-4" data-muse-uid="U3630" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3436-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3436-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3436" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3636-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3636-4" data-muse-uid="U3636" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3434-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3434-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3434" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3639-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3639-4" data-muse-uid="U3639" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3437-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3437-4" href="games.html" data-href="page:U2961" data-muse-uid="U3437" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
@@ -102,7 +117,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u3084').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
+$('#u3084').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
