--- a/gk/curtain/index.html
+++ b/gk/curtain/index.html
@@ -22,8 +22,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4092552753" id="pagesheet"/>
-    <!--HTML Widget code-->
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=406506159" id="pagesheet"/>
+    <!--custom head HTML-->
+  <script>/*	var d = new Date();	var currentTime = d.getHours();	if (currentTime >= 19 || currentTime < 7) {		window.location.replace("home-dark.html");	}*/</script>
+  <!--HTML Widget code-->
   
 <style>
 
@@ -483,11 +485,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- m_editable region-id="editable-static-tag-U3465-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u3465-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3465" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
       <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3642-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u3642-4" data-muse-uid="U3642" data-muse-type="txt_frame"><!-- content -->
+       <p>|</p>
+      </div>
+      <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U3466-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u3466-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3466" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
       <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3645-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u3645-4" data-muse-uid="U3645" data-muse-type="txt_frame"><!-- content -->
+       <p>|</p>
+      </div>
+      <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U3464-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u3464-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3464" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3651-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u3651-4" data-muse-uid="U3651" data-muse-type="txt_frame"><!-- content -->
+       <p>|</p>
+      </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U3467-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u3467-4" href="games.html" data-href="page:U2961" data-muse-uid="U3467" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
@@ -533,12 +550,12 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u2581').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,509],"opacity":0},{"opacity":0,"in":[509,509]},{"fade":50,"in":[509,Infinity],"opacity":100}]);/* scroll effect */
+$('#u2581').registerOpacityScrollEffect([{"in":[-Infinity,509],"fade":0,"opacity":0},{"opacity":0,"in":[509,509]},{"in":[509,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 $('#u2158').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,100]},{"speed":[0,2],"in":[100,Infinity]}]);/* scroll effect */
-$('#u2158').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,100],"opacity":100},{"opacity":100,"in":[100,100]},{"fade":100,"in":[100,Infinity],"opacity":0}]);/* scroll effect */
+$('#u2158').registerOpacityScrollEffect([{"in":[-Infinity,100],"fade":0,"opacity":100},{"opacity":100,"in":[100,100]},{"in":[100,Infinity],"fade":100,"opacity":0}]);/* scroll effect */
 $('#u2159').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[4.5,0],"in":[0,Infinity]}]);/* scroll effect */
 $('#u2160').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2160').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"opacity":100,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
+$('#u2160').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":100},{"opacity":100,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":0}]);/* scroll effect */
 $('#u2162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-7,0],"in":[0,Infinity]}]);/* scroll effect */
 $('#u2163').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[6.5,0],"in":[0,Infinity]}]);/* scroll effect */
 $('#u2164').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-4,0],"in":[0,Infinity]}]);/* scroll effect */
