--- a/gk/curtain/phone/about-us.html
+++ b/gk/curtain/phone/about-us.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=3892374332" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=265146896" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#u3723 {  pointer-events: none;}</style>
+  <style>#u5298 {  pointer-events: none;}</style>
   <!--/*
 
 */
@@ -64,27 +64,44 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>© Gods Kid Inc 2020</p>
     </div>
     <!-- /m_editable -->
-    <div class="museBGSize grpelem" id="u3521"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U3521-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize grpelem" id="u3521" href="http://www.tacklebox.company" target="_blank" data-muse-uid="U3521"><!-- content --></a>
+    <!-- /m_editable -->
     <div class="clearfix grpelem" id="u3522"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U3523-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3523-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3523" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3702-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3702-4" data-muse-uid="U3702" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3526-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3526-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3526" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3525-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3525-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3525" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- m_editable region-id="editable-static-tag-U3722-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3722-4" data-muse-uid="U3722" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3525-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3525-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3525" data-muse-type="txt_frame"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3732-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3732-4" data-muse-uid="U3732" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3524-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3524-4" href="games.html" data-href="page:U2909" data-muse-uid="U3524" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
-    <div class="grpelem" id="u3723"><!-- animation -->
-     <iframe class="animationContainer an_invi" id="U3726_animation" src="../assets/curtainmobile/curtainmobile.html" scrolling="no"></iframe>
+    <div class="grpelem" id="u5298"><!-- animation -->
+     <iframe class="animationContainer an_invi" id="U5301_animation" src="../assets/curtain_mobile/curtain_mobile.html" scrolling="no"></iframe>
     </div>
    </div>
    <div class="ose_pre_init mse_pre_init" id="u1480"><!-- content --></div>
-   <div class="verticalspacer" data-offset-top="826" data-content-above-spacer="826" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="798" data-content-above-spacer="826" data-content-below-spacer="28"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
