--- a/gk/curtain/phone/index.html
+++ b/gk/curtain/phone/index.html
@@ -14,14 +14,12 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <link rel="canonical" href="https://lanceencarnado.github.io/gk/curtain/index.html"/>
+  <link rel="canonical" href="https://tackleboxing.000webhostapp.com/index.html"/>
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=471469187" id="pagesheet"/>
-    <!--custom head HTML-->
-  <style>#u3803 {  pointer-events: none;}</style>
-  <!--/*
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=472117455" id="pagesheet"/>
+    <!--/*
 
 */
 -->
@@ -63,10 +61,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext anim_swing museBGSize Banner mse_pre_init" id="u2593" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U2593"><!-- content --></a>
     <!-- /m_editable -->
    </div>
-   <div class="clearfix grpelem" id="pgk"><!-- group -->
-    <a class="anchor_item grpelem" id="gk"></a>
-    <div class="grpelem" id="u401"><!-- custom html -->
-     <div id='collection-component-1594095473767'></div>
+   <div class="clearfix grpelem" id="pgk"><!-- column -->
+    <a class="anchor_item colelem" id="gk"></a>
+    <div class="clearfix colelem" id="pu401"><!-- group -->
+     <div class="grpelem" id="u401"><!-- custom html -->
+      <div id='collection-component-1594095473767'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
@@ -321,29 +320,46 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 })();
 /*]]>*/
 </script>
-    </div>
-    <!-- m_editable region-id="editable-static-tag-U3568-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix grpelem" id="u3568-4" data-muse-uid="U3568" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>© Gods Kid Inc 2020</p>
-    </div>
-    <!-- /m_editable -->
-    <div class="museBGSize grpelem" id="u3569"><!-- content --></div>
-    <div class="clearfix grpelem" id="u3570"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U3571-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3571-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3571" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     </div>
+     <!-- m_editable region-id="editable-static-tag-U3568-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u3568-4" data-muse-uid="U3568" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>© Gods Kid Inc 2020</p>
+     </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3574-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3574-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3574" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+     <!-- m_editable region-id="editable-static-tag-U3569-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext museBGSize grpelem" id="u3569" href="http://www.tacklebox.company" target="_blank" data-muse-uid="U3569"><!-- content --></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3573-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3573-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3573" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3572-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3572-4" href="games.html" data-href="page:U2909" data-muse-uid="U3572" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
-     <!-- /m_editable -->
-    </div>
-    <div class="grpelem" id="u3803"><!-- animation -->
-     <iframe class="animationContainer an_invi" id="U3805_animation" src="../assets/curtainmobile/curtainmobile.html" scrolling="no"></iframe>
+     <div class="clearfix grpelem" id="u3570"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U3571-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3571-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3571" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3782-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u3782-4" data-muse-uid="U3782" data-muse-type="txt_frame"><!-- content -->
+       <p>|</p>
+      </div>
+      <!-- /m_editable -->
+      <div class="clearfix grpelem" id="pu3787-4"><!-- group -->
+       <!-- m_editable region-id="editable-static-tag-U3787-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+       <div class="clearfix grpelem" id="u3787-4" data-muse-uid="U3787" data-muse-type="txt_frame"><!-- content -->
+        <p>|</p>
+       </div>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U3574-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+       <a class="nonblock nontext clearfix grpelem" id="u3574-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3574" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+       <!-- /m_editable -->
+      </div>
+      <!-- m_editable region-id="editable-static-tag-U3573-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3573-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3573" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3807-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u3807-4" data-muse-uid="U3807" data-muse-type="txt_frame"><!-- content -->
+       <p>|</p>
+      </div>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3572-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3572-4" href="games.html" data-href="page:U2909" data-muse-uid="U3572" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+      <!-- /m_editable -->
+     </div>
     </div>
    </div>
    <div class="verticalspacer" data-offset-top="4007" data-content-above-spacer="4007" data-content-below-spacer="29"></div>
@@ -363,7 +379,6 @@ var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","muse
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u2820').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
