--- a/gk/curtain/assets/curtain_mobile/curtain_mobile.html
+++ b/gk/curtain/assets/curtain_mobile/curtain_mobile.html
@@ -11,27 +11,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>curtain</title>
+<title>curtain_mobile</title>
 <!-- write your code here -->
-<style>
-  body {
-	overflow:hidden;
-  }
-  #animation_container {
-	position:absolute;
-	margin:auto;
-	left:-100%;right:-100%;
-  }
-</style>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script src="curtain.js"></script>
+<script src="curtain_mobile.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
 	canvas = document.getElementById("canvas");
 	anim_container = document.getElementById("animation_container");
 	dom_overlay_container = document.getElementById("dom_overlay_container");
-	var comp=AdobeAn.getComposition("35362CDEABD343A98292BA71B2DA1A19");
+	var comp=AdobeAn.getComposition("E276715C7F2E4603AB89C66C3520008E");
 	var lib=comp.getLibrary();
 	var loader = new createjs.LoadQueue(false);
 	loader.addEventListener("fileload", function(evt){handleFileLoad(evt,comp)});
@@ -52,7 +42,7 @@ function handleComplete(evt,comp) {
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.curtain();
+	exportRoot = new lib.curtain_mobile();
 	stage = new lib.Stage(canvas);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
@@ -96,7 +86,7 @@ function handleComplete(evt,comp) {
 			stage.tickOnUpdate = true;		
 		}
 	}
-	makeResponsive(true,'width',true,2);	
+	makeResponsive(false,'width',false,2);	
 	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
 }
@@ -104,9 +94,9 @@ function handleComplete(evt,comp) {
 <!-- write your code here -->
 </head>
 <body onload="init();" style="margin:0px;">
-	<div id="animation_container" style="background-color:rgba(255, 255, 255, 0.00); width:1240px; height:1000px">
-		<canvas id="canvas" width="1240" height="1000" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 0.00);"></canvas>
-		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:1240px; height:1000px; position: absolute; left: 0px; top: 0px; display: block;">
+	<div id="animation_container" style="background-color:rgba(255, 255, 255, 0.00); width:380px; height:900px">
+		<canvas id="canvas" width="380" height="900" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 0.00);"></canvas>
+		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:380px; height:900px; position: absolute; left: 0px; top: 0px; display: block;">
 		</div>
 	</div>
 </body>
