--- a/gk/curtain/games.html
+++ b/gk/curtain/games.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Games</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/games.css?crc=4260113498" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/games.css?crc=428774806" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#cubpupcontainer {  margin: auto;  text-align: center;  min-width: 400px;}#puzzlecontainer {  margin: auto;  text-align: center;  min-width: 400px;}iframe {  border: none;  overflow: hidden;}</style>
   <!--/*
@@ -54,26 +54,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="ose_pre_init" id="u3138"><!-- content --></div>
    </div>
-   <div class="clearfix grpelem" id="pu3592-4"><!-- column -->
-    <!-- m_editable region-id="editable-static-tag-U3592-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u3592-4" data-muse-uid="U3592" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+   <div class="clearfix grpelem" id="pu3686-4"><!-- column -->
+    <!-- m_editable region-id="editable-static-tag-U3686-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3686-4" data-muse-uid="U3686" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p>Cherub Maze</p>
     </div>
     <!-- /m_editable -->
-    <div class="browser_width colelem" id="u3595-bw">
-     <div id="u3595"><!-- custom html -->
+    <div class="browser_width colelem" id="u3687-bw">
+     <div id="u3687"><!-- custom html -->
       <div id="cubpupcontainer">
 <iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="80%" height="620"></iframe>
 </div>
      </div>
     </div>
-    <!-- m_editable region-id="editable-static-tag-U3600-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u3600-4" data-muse-uid="U3600" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <!-- m_editable region-id="editable-static-tag-U3688-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3688-4" data-muse-uid="U3688" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p>Puzzle</p>
     </div>
     <!-- /m_editable -->
-    <div class="browser_width colelem" id="u3603-bw">
-     <div id="u3603"><!-- custom html -->
+    <div class="browser_width colelem" id="u3689-bw">
+     <div id="u3689"><!-- custom html -->
       <div id="puzzlecontainer">
 <iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_responsive/" width="80%" height="700"></iframe>
 </div>
@@ -83,11 +83,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U3364-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3364-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3364" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3592-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3592-4" data-muse-uid="U3592" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3365-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3365-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3365" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3597-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3597-4" data-muse-uid="U3597" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3363-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3363-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3363" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3600-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3600-4" data-muse-uid="U3600" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3366-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3366-4" href="games.html" data-href="page:U2961" data-muse-uid="U3366" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
@@ -102,7 +117,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clip_frame colelem" id="u2946" href="http://www.tacklebox.company" data-muse-uid="U2946"><!-- svg --><img class="svg" id="u2947" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
     <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="2113" data-content-above-spacer="2112" data-content-below-spacer="58"></div>
+   <div class="verticalspacer" data-offset-top="2063" data-content-above-spacer="2062" data-content-below-spacer="49"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -123,7 +138,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u3138').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
+$('#u3138').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
