--- a/gk/curtain/phone/gallery.html
+++ b/gk/curtain/phone/gallery.html
@@ -14,14 +14,12 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "gallery.css"], "outOfDate":[]};
 </script>
   
-  <link rel="canonical" href="https://lanceencarnado.github.io/gk/curtain/gallery.html"/>
+  <link rel="canonical" href="https://tackleboxing.000webhostapp.com/gallery.html"/>
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=376795098" id="pagesheet"/>
-    <!--custom head HTML-->
-  <style>#u3807 {  pointer-events: none;}</style>
-  <!--/*
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=4233176695" id="pagesheet"/>
+    <!--/*
 
 */
 -->
@@ -29,11 +27,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppu1526"><!-- column -->
-    <div class="clearfix colelem" id="pu1526"><!-- group -->
+   <div class="ose_pre_init mse_pre_init" id="u1534"><!-- content --></div>
+   <div class="clearfix grpelem" id="ppu1528"><!-- column -->
+    <div class="clearfix colelem" id="pu1528"><!-- group -->
+     <div class="museBGSize grpelem" id="u1528"><!-- content --></div>
      <div class="museBGSize grpelem" id="u1526"><!-- content --></div>
      <div class="museBGSize grpelem" id="u1527"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u1528"><!-- content --></div>
+    </div>
+    <div class="clearfix colelem" id="pu1533"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U1533-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext museBGSize grpelem" id="u1533" href="index.html" data-href="page:U400" data-muse-uid="U1533"><!-- content --></a>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1529-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u1529-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U1529" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
@@ -46,16 +50,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U1532-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u1532-4" href="games.html" data-href="page:U2909" data-muse-uid="U1532" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1533-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext museBGSize grpelem" id="u1533" href="index.html" data-href="page:U400" data-muse-uid="U1533"><!-- content --></a>
-     <!-- /m_editable -->
-     <div class="grpelem" id="u1118"><!-- content --></div>
-     <div class="grpelem" id="u1114"><!-- content --></div>
-     <div class="grpelem" id="u1116"><!-- content --></div>
-     <div class="grpelem" id="u3807"><!-- animation -->
-      <iframe class="animationContainer an_invi" id="U3809_animation" src="../assets/curtainmobile/curtainmobile.html" scrolling="no"></iframe>
-     </div>
     </div>
+    <div class="colelem" id="u1114"><!-- content --></div>
+    <div class="colelem" id="u1116"><!-- content --></div>
+    <div class="colelem" id="u1118"><!-- content --></div>
     <div class="colelem" id="u1117"><!-- content --></div>
     <div class="colelem" id="u1119"><!-- content --></div>
     <div class="colelem" id="u1120"><!-- content --></div>
@@ -64,12 +62,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U3547-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3547-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3547" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3550-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3550-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3550" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+     <!-- m_editable region-id="editable-static-tag-U3762-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3762-4" data-muse-uid="U3762" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3549-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u3549-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3549" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- m_editable region-id="editable-static-tag-U3550-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3550-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3550" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3767-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3767-4" data-muse-uid="U3767" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="clearfix grpelem" id="pu3772-4"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U3772-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u3772-4" data-muse-uid="U3772" data-muse-type="txt_frame"><!-- content -->
+       <p>|</p>
+      </div>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3549-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3549-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3549" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+      <!-- /m_editable -->
+     </div>
      <!-- m_editable region-id="editable-static-tag-U3548-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u3548-4" href="games.html" data-href="page:U2909" data-muse-uid="U3548" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
@@ -79,10 +94,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>© Gods Kid Inc 2020</p>
     </div>
     <!-- /m_editable -->
-    <div class="museBGSize colelem" id="u3545"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U3545-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize colelem" id="u3545" href="http://www.tacklebox.company" target="_blank" data-muse-uid="U3545"><!-- content --></a>
+    <!-- /m_editable -->
    </div>
-   <div class="ose_pre_init mse_pre_init" id="u1534"><!-- content --></div>
-   <div class="verticalspacer" data-offset-top="2943" data-content-above-spacer="2943" data-content-below-spacer="29"></div>
+   <div class="verticalspacer" data-offset-top="2931" data-content-above-spacer="2931" data-content-below-spacer="41"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -99,7 +115,6 @@ var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","muse
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u1534').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
