--- a/gk/curtain/phone/games.html
+++ b/gk/curtain/phone/games.html
@@ -14,13 +14,13 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "games.css"], "outOfDate":[]};
 </script>
   
-  <link rel="canonical" href="https://lanceencarnado.github.io/gk/curtain/games.html"/>
+  <link rel="canonical" href="https://tackleboxing.000webhostapp.com/games.html"/>
   <title>Games</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/games.css?crc=151391626" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/games.css?crc=3877949935" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#u3811 {  pointer-events: none;}iframe {  border: none;}#cubpupcontainer {  margin: auto;  text-align: center;}#puzzlecontainer {  margin: auto;  text-align: center;}#puzzleiframe {  overflow: hidden;}</style>
+  <style>iframe {  border: none;}#cubpupcontainer {  margin: auto;  text-align: center;}#puzzlecontainer {  margin: auto;  text-align: center;}#puzzleiframe {  overflow: hidden;}</style>
   <!--/*
 
 */
@@ -30,16 +30,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix" id="page"><!-- group -->
    <div class="ose_pre_init mse_pre_init" id="u2880"><!-- content --></div>
-   <div class="clearfix grpelem" id="ppu2879-4"><!-- column -->
-    <div class="clearfix colelem" id="pu2879-4"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U2879-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u2879-4" data-muse-uid="U2879" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>© Gods Kid Inc 2020</p>
-     </div>
-     <!-- /m_editable -->
+   <div class="clearfix grpelem" id="ppu2877"><!-- column -->
+    <div class="clearfix colelem" id="pu2877"><!-- group -->
+     <div class="museBGSize grpelem" id="u2877"><!-- content --></div>
      <div class="museBGSize grpelem" id="u2878"><!-- content --></div>
      <div class="museBGSize grpelem" id="u2870"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u2877"><!-- content --></div>
+    </div>
+    <div class="clearfix colelem" id="pu2876"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U2876-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext museBGSize grpelem" id="u2876" href="index.html" data-href="page:U400" data-muse-uid="U2876"><!-- content --></a>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U2872-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u2872-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U2872" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
@@ -52,54 +52,72 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U2873-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u2873-4" href="games.html" data-href="page:U2909" data-muse-uid="U2873" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
-     <div class="clearfix grpelem" id="u3397"><!-- group -->
-      <!-- m_editable region-id="editable-static-tag-U3380-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext clearfix grpelem" id="u3380-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3380" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U3814-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3814-4" data-muse-uid="U3814" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p>Cherub Maze</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="browser_width colelem" id="u3812-bw">
+     <div id="u3812"><!-- custom html -->
+      <div id="cubpupcontainer">
+<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="90%" height="500"></iframe>
+</div>
+     </div>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U3815-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3815-4" data-muse-uid="U3815" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p>Puzzle</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="browser_width colelem" id="u3813-bw">
+     <div id="u3813"><!-- custom html -->
+      <div id="puzzlecontainer">
+<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="365" height="300" scrolling="no"></iframe>
+</div>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u3397"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U3380-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3380-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3380" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3742-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3742-4" data-muse-uid="U3742" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="clearfix grpelem" id="pu3747-4"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U3747-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u3747-4" data-muse-uid="U3747" data-muse-type="txt_frame"><!-- content -->
+       <p>|</p>
+      </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U3385-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u3385-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3385" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
       <!-- /m_editable -->
-      <!-- m_editable region-id="editable-static-tag-U3389-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-      <a class="nonblock nontext clearfix grpelem" id="u3389-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3389" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
-      <!-- /m_editable -->
-      <!-- m_editable region-id="editable-static-tag-U3393-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3393-4" href="games.html" data-href="page:U2909" data-muse-uid="U3393" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
-      <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U2876-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext museBGSize grpelem" id="u2876" href="index.html" data-href="page:U400" data-muse-uid="U2876"><!-- content --></a>
+     <!-- m_editable region-id="editable-static-tag-U3389-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3389-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3389" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
      <!-- /m_editable -->
-     <div class="browser_width grpelem" id="u3625-bw">
-      <div id="u3625"><!-- custom html -->
-       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="90%" height="500"></iframe>
-</div>
-      </div>
-     </div>
-     <div class="browser_width grpelem" id="u3626-bw">
-      <div id="u3626"><!-- custom html -->
-       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="365" height="300" scrolling="no"></iframe>
-</div>
-      </div>
-     </div>
-     <!-- m_editable region-id="editable-static-tag-U3627-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u3627-4" data-muse-uid="U3627" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Cherub Maze</p>
+     <!-- m_editable region-id="editable-static-tag-U3757-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u3757-4" data-muse-uid="U3757" data-muse-type="txt_frame"><!-- content -->
+      <p>|</p>
      </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U3628-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u3628-4" data-muse-uid="U3628" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Puzzle</p>
-     </div>
+     <!-- m_editable region-id="editable-static-tag-U3393-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3393-4" href="games.html" data-href="page:U2909" data-muse-uid="U3393" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
-     <div class="grpelem" id="u3811"><!-- animation -->
-      <iframe class="animationContainer an_invi" id="U3813_animation" src="../assets/curtainmobile/curtainmobile.html" scrolling="no"></iframe>
-     </div>
     </div>
-    <div class="museBGSize colelem" id="u2875"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U2879-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u2879-4" data-muse-uid="U2879" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p>© Gods Kid Inc 2020</p>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U2875-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize colelem" id="u2875" href="http://www.tacklebox.company" target="_blank" data-muse-uid="U2875"><!-- content --></a>
+    <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="1274" data-content-above-spacer="1274" data-content-below-spacer="26"></div>
+   <div class="verticalspacer" data-offset-top="1227" data-content-above-spacer="1226" data-content-below-spacer="29"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -118,7 +136,6 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
-Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u2880').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
